MOD: updated docker-compose.yml

--- a/.env
+++ b/.env
@@ -1,1 +1,25 @@
-PATH_NGINX_CERTS=/Users/bingo/project/certs
+# path to save nginx certs.
+NGINX_CERTS_PATH=/usr/local/nginx/certs
+
+# root nginx image.
+NGINX_ROOT_IMAGE=nginx
+NGINX_ROOT_IMAGE_TAG=alpine
+
+# root nginx http/https ports.
+NGINX_ROOT_HTTP_PORT=80
+NGINX_ROOT_HTTPS_PORT=443
+
+# nginx-root container_name.
+NGINX_ROOT_NAME=nginx-root
+
+# nginx-gen container_name.
+NGINX_GEN_NAME=nginx-gen
+
+# nginx-gen time for wait.
+NGINX_GEN_WAIT_TIME=5s:30s
+
+# nginx-certbot container_name.
+NGINX_CERTBOT_NAME=nginx-certbot
+
+# docker.sock
+DOCKER_SOCK=/var/run/docker.sock
