--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,38 @@
 version: '2'
-
 services:
-  nginx:
+  nginx-root:
     restart: always
-    image: nginx
-    container_name: nginx
+    image: ${NGINX_ROOT_IMAGE}:${NGINX_ROOT_IMAGE_TAG}
+    container_name: ${NGINX_ROOT_NAME}
     ports:
-      - 80:80
-      - 443:443
+      - ${NGINX_ROOT_HTTP_PORT}:80
+      - ${NGINX_ROOT_HTTPS_PORT}:443
     volumes:
       - /etc/nginx/conf.d
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
-      - ${PATH_NGINX_CERTS}:/etc/nginx/certs:ro
+      - ${NGINX_CERTS_PATH}:/etc/nginx/certs:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
   nginx-gen:
     restart: always
     image: bingozb/nginx-gen
-    container_name: nginx-gen
+    container_name: ${NGINX_GEN_NAME}
     volumes_from:
-      - nginx
+      - nginx-root
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    command: -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    command: -notify-sighup ${NGINX_ROOT_NAME} -watch -wait ${NGINX_GEN_WAIT_TIME} /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   nginx-certbot:
     restart: always
     image: bingozb/nginx-certbot
-    container_name: nginx-certbot
+    container_name: ${NGINX_CERTBOT_NAME}
+    environment:
+      - NGINX_DOCKER_GEN_CONTAINER=${NGINX_GEN_NAME}
+      - NGINX_PROXY_CONTAINER=${NGINX_ROOT_NAME}
     volumes_from:
-      - nginx
+      - nginx-root
     volumes:
-      - ${PATH_NGINX_CERTS}:/etc/nginx/certs:rw
+      - ${NGINX_CERTS_PATH}:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
