--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
       - ${NGINX_CERTS_PATH}:/etc/nginx/certs:ro
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ${DOCKER_SOCK}:/tmp/docker.sock:ro
 
   nginx-gen:
     restart: always
@@ -35,4 +35,4 @@ services:
       - nginx-root
     volumes:
       - ${NGINX_CERTS_PATH}:/etc/nginx/certs:rw
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ${DOCKER_SOCK}:/var/run/docker.sock:ro
