MOD: add networks.

--- a/.env
+++ b/.env
@@ -21,5 +21,8 @@ NGINX_GEN_WAIT_TIME=5s:30s
 # nginx-certbot container_name.
 NGINX_CERTBOT_NAME=nginx-certbot
 
+# nginx-proxy network name
+NGINX_PROXY_NETWORK=nginx-proxy
+
 # docker.sock
 DOCKER_SOCK=/var/run/docker.sock
